<resources>
    <string name="app_name">NaTripEuVou</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_confirm_senha">Confirme sua senha</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="btn_entrar_login">Entrar</string>
    <string name="btn_cadastrar">Cadastrar-se</string>
    <string name="ja_tem_conta">Já tem uma conta? Faça login aqui</string>
    <string name="navega_login">Faça login aqui</string>
    <string name="sem_cadastro">Não tem cadastro?</string>
    <string name="navega_cadastro">Crie sua conta aqui</string>
</resources>