<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente_background"
    tools:context=".Login_Screen">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logobranca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_Input_Layout_Email_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_editText_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_stroke_white"
            android:drawableEnd="@drawable/ic_email_white"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_Input_Layout_senha_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_Input_Layout_Email_Login"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_editText_senha_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_stroke_white"
            android:hint="@string/hint_senha"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/esqueceu_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="190dp"
        android:layout_marginTop="10dp"
        android:text="@string/esqueceu_sua_senha"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/txt_Input_Layout_senha_Login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_entrar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/esqueceu_senha"
        android:layout_marginTop="50dp"
        android:text="@string/btn_entrar_login"
        android:background="@drawable/background_button_entrar"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/sem_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_entrar_login"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/sem_cadastro"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/navega_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_stroke_white"
        app:layout_constraintTop_toBottomOf="@+id/sem_cadastro"
        android:layout_marginTop="5dp"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="128dp"
        android:text="@string/navega_cadastro"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:padding="3dp"/>







</androidx.constraintlayout.widget.ConstraintLayout>